# helse-styringsinfo-kvalitetssjekk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: alerts.yaml  deploy.yaml
.nais/: naisjob.yaml  soda-checks.yaml  soda-config.yaml
local/: Makefile  pyproject.toml  soda-scan.py
local/soda-checks/: spre_styringsinfo_dataset.yaml  styringsinfo_dataset.yaml
local/soda-config/: config.yaml
nais/: alerts.yaml  dev-run-once.yaml  dev.yaml  naisjob-dev.yaml  naisjob-prod.yaml  naisjob.yaml  prod-run-once.yaml  prod.yaml  soda-checks-common.yaml  soda-checks-dev.yaml  soda-checks-prod.yaml  soda-checks.yaml  soda-config-prod.yaml  soda-config.yaml
