[tool.poetry]
name = "soda-checks"
version = "0.1.0"
description = "Kjører Soda-sjekker fra lokal maskin mot BigQuery."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "soda_checks"}]

[tool.poetry.dependencies]
python = "^3.11"
soda-core-bigquery = "^3.0.47"
google-cloud-bigquery-storage = "^2.22.0"
pyarrow = "^12.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
